--- a/Assignment 7.html
+++ b/Assignment 7.html
@@ -14348,7 +14348,7 @@ a.anchor-link {
 <p>$N(k) = 
 \begin{cases} 
 0 &amp; \text{if $k=0$} \\
-\min_{x_i\leq k}{[N(k-x)+1]} &amp; \text{if $k&gt;2$}
+\min_{x_i\leq k}{[N(k-x_i)+1]} &amp; \text{if $k&gt;2$}
 \end{cases}$</p>
 
 </div>
